test/errors/resolution/invalidNewTarget.compopts
--detailed-errors # invalidNewTarget-detailed.good
--no-detailed-errors # invalidNewTarget-brief.good
